--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 :root
 {
+	--background-color: #121212;
+	--text-color: #A9A9A9;
 	/* Colours */
 	--dark: rgb(68, 89, 94);
 	--medium: rgb(110, 132, 137);
@@ -13,21 +15,19 @@ html
 	font-family: "IBM Plex Mono", sans-serif;
 	font-weight: 400;
 	font-style: normal;
-	font-size: 100%;
-	line-height: 1.3;
 	font-size: 16px;
 	line-height: 1.5;
 	margin: 0;
 	padding: 0;
 }
 
-
 body
 {
+	background-color: var(--background-color);
 	font-weight: 400;
 	font-style: normal;
 	font-size: 0.8rem;
-	color: var(--dark);
+	color: var(--text-color);
 	max-width: 1440px;
 	margin: 0 auto 0 auto;
 	padding: 0 1rem 0 1rem;
@@ -37,15 +37,15 @@ body
 
 a, a:link
 {
-	color: var(--dark);
+	color: var(--text-color);
 	text-decoration-color: var(--orange);
 }
 
-a:visited { color: var(--medium); }
+a:visited { color: var(--light); }
 a:hover { color: lightgrey; }
 a:active { color: orange; }
 a:focus { outline: 2px solid black; }
-header h1 a:visited { color: var(--dark); }
+header h1 a:visited { color: var(--text-color); }
 header h1 a:hover { color: var(--medium); }
 p { margin-bottom: .5rem; }
 a.nodecoration { text-decoration: none; }
@@ -106,7 +106,7 @@ footer
 	grid-area: footer;
 	border-top: .25rem solid var(--medium);
 	padding: 1rem;
-	background-color: var(--lightest);
+	background-color: var(--dark);
 	font-size: .8rem;
 }
 
@@ -123,7 +123,7 @@ h1, h2
 {
 	font-weight: 600;
 	font-style: normal;
-	color: var(--dark);
+	color: var(--text-color);
 	margin-top: 1rem;
 	margin-bottom: 0;
 	padding-bottom: 0;
@@ -133,7 +133,7 @@ h3, h4, h5, h6
 {
 	font-weight: 500;
 	font-style: normal;
-	color: var(--dark);
+	color: var(--text-color);
 	margin-top: 1rem;
 	margin-bottom: 0;
 	padding-bottom: 0;
@@ -255,9 +255,12 @@ dd { margin: 0 2rem 1rem 2rem; }
 	font-weight: 500;
 	font-style: var(--font_style_normal);
 }
-.small-caps {
+
+.small-caps
+{
 	font-variant: small-caps;
-	font-weight: 600; }
+	font-weight: 600;
+}
 
 table
 {
@@ -276,8 +279,13 @@ th
 	border-bottom: 2px solid grey;
 }
 
-td { font-size: .85rem; width: 33%; border-bottom: 1px solid lightgrey; word-wrap:break-word; }
-
+td
+{
+	font-size: .85rem;
+	width: 33%;
+	border-bottom: 1px solid lightgrey;
+	word-wrap: break-word;
+}
 
 em
 {
