--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 :root
 {
-	--background-color: #121212;
-	--text-color: #A9A9A9;
+	--background-color: rgb(50, 50, 50);
+	--text-color: rgb(169, 169, 169);
 	/* Colours */
-	--dark: rgb(68, 89, 94);
-	--medium: rgb(110, 132, 137);
+	--dark: rgb(43, 43, 43);
+	--medium: rgb(80, 80, 80);
 	--light: rgb(194, 201, 189);
 	--lightest: rgb(221, 225, 219);
 	--orange: rgb(255, 147, 0);
@@ -38,11 +38,19 @@ body
 a, a:link
 {
 	color: var(--text-color);
+	text-decoration: none;
+	border-bottom: 1px solid var(--orange);
 	text-decoration-color: var(--orange);
 }
 
 a:visited { color: var(--light); }
-a:hover { color: lightgrey; }
+
+a:hover
+{
+	color: lightgrey;
+	border-bottom: 1px solid var(--medium);
+}
+
 a:active { color: orange; }
 a:focus { outline: 2px solid black; }
 header h1 a:visited { color: var(--text-color); }
@@ -176,31 +184,51 @@ ul.nav
 	font-weight: 600;
 }
 
-main ul li
+ul.legend
 {
-	font-weight: 400;
-	font-style: normal;
-	line-height: 1.25rem;
+	list-style-type: none;
+	/* Remove bullet points */
+	padding-left: 0;
+	/* Align list with page content */
+	display: flex;
+	/* Align items horizontally */
+	gap: 20px;
+	/* Add spacing between items */
+}
+
+ul.legend li
+{
+	display: flex;
+	/* Align items horizontally */
+	align-items: center;
+	/* Vertically align text with icons */
+	margin-bottom: 1rem;
+	/* Add spacing between legend items */
+}
+
+ul.legend li img
+{
+	margin-right: 10px;
+	/* Add spacing between icon and text */
+}
+
+ul.employers li span img, ul.legend li span img
+{
+	display: inline;
+	/* Ensure SVG icons stay inline with text */
+	vertical-align: middle;
+	/* Align icons with text */
+	margin-left: 0.25rem;
+	/* Add spacing between text and icon */
 }
 
 ul.employers
 {
-	padding-left: .5rem;
 	list-style-type: none;
+	padding-left: 0;
 }
 
-ul.employers li:nth-child(even)
-{
-	line-height: 140%;
-	margin-bottom: 1rem;
-}
-
-/* 
-ul.employers li:nth-child(even):before {
-	content: "\2709";
-	margin-right: 10px;
-}
- */
+ul.employers li { padding: 0.25rem 0 0.5rem 0; }
 
 code
 {
@@ -265,9 +293,21 @@ dd { margin: 0 2rem 1rem 2rem; }
 table
 {
 	width: 100%;
+	table-layout: auto;
+	/* Columns adjust to content */
+	border-collapse: collapse;
+	/* Removes space between borders */
 	border-spacing: .25rem;
 	margin-bottom: 2rem;
 	margin-top: 2rem;
+}
+
+th, td
+{
+	padding: 2px;
+	text-align: left;
+}
+
 }
 
 th
@@ -332,7 +372,7 @@ footer span { display: block; }
 	nav
 	{
 		background-color: var(--dark);
-		border-bottom: .5rem solid var(--light);
+		border-bottom: 1px solid var(--medium);
 	}
 	
 	header h1 { margin-top: 1rem; }
