--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,9 @@ header
 	margin: 0 1rem;
 }
 
+aside { margin: 0 1rem; }
+main { margin: 0 1rem; }
+
 nav
 {
 	grid-area: nav;
@@ -56,24 +59,28 @@ nav
 	width: 100%;
 }
 
-aside { margin: 0 1rem; }
-main { margin: 0 1rem; }
-
 nav ul
 {
 	list-style-type: none;
 	display: flex;
-	justify-content: flex-end;
-	flex-wrap: wrap;
+	flex-direction: column;
+	align-items: center;
 	margin: 0;
 	padding: 0.5rem 1rem;
 }
 
-nav ul li { padding: 0 1rem; }
+nav ul li
+{
+	width: 100%;
+	text-align: center;
+	padding: 0.5rem 0;
+	margin-top: 0.5rem;
+}
 
 nav ul li a
 {
 	color: white;
+	font-size: 1.5rem;
 	text-decoration: none;
 	text-transform: uppercase;
 }
@@ -358,7 +365,27 @@ footer span { display: block; }
 	nav
 	{
 		font-size: 1.1rem;
+		display: flex;
+		justify-content: flex-end;
 		background-color: var(--dark);
+	}
+	
+	nav ul
+	{
+		list-style-type: none;
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-end;
+		flex-wrap: wrap;
+		margin: 0;
+		padding: 0.5rem 1rem;
+	}
+	
+	nav ul li
+	{
+		width: auto;
+		padding: 0.5rem 1rem;
+		margin-top: 0;
 	}
 	
 	h1 { font-size: 2rem; }
