--- a/css/styles.css
+++ b/css/styles.css
@@ -388,5 +388,10 @@ footer span { display: block; }
 		margin-top: 0;
 	}
 	
+	nav ul li a
+	{
+		font-size: 1.1rem;
+	}
+	
 	h1 { font-size: 2rem; }
 }
