--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 	--light: rgb(194, 194, 194);
 	--lightest: rgb(221, 225, 219);
 	--orange: rgb(255, 147, 0);
+	--orange50: rgba(255, 147, 0, 0.5);
 }
 
 *
@@ -94,15 +95,8 @@ a, a:link
 }
 
 a:visited { color: var(--light); }
-
-a:hover
-{
-	color: var(--lightest);
-	border-bottom: 1px solid var(--medium);
-}
-
 a:active { color: var(--orange); }
-a:focus { outline: 2px solid black; }
+a:hover { color: var(--lightest); }
 p { margin-bottom: 2.0rem; }
 
 figure svg
@@ -158,6 +152,7 @@ h1, h2
 	margin-top: 1rem;
 	margin-bottom: 0;
 	padding-bottom: 0;
+	border-bottom: 0;
 }
 
 h3, h4, h5, h6
@@ -170,6 +165,15 @@ h3, h4, h5, h6
 	padding-bottom: 0;
 }
 
+:is(h1, h2, h3, h4, h5, h6) a, 
+:is(h1, h2, h3, h4, h5, h6) a:link
+{
+	text-decoration: none;
+	border-bottom: none;
+	text-decoration-color: transparent;
+}
+
+:is(h1, h2, h3, h4, h5, h6) a:hover { color: var(--orange); }
 h1 + p,
 	h2 + p,
 	h3 + p,
@@ -388,10 +392,6 @@ footer span { display: block; }
 		margin-top: 0;
 	}
 	
-	nav ul li a
-	{
-		font-size: 1.1rem;
-	}
-	
+	nav ul li a { font-size: 1.1rem; }
 	h1 { font-size: 2rem; }
 }
