edit title of aside

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,3 +1,6 @@
+<h3>
+	Dates & Stuff
+</h3>
 <p>
 	Fieldwork will start {{ site.data.course-info.fieldwork-start-date }} for six weeks, ending {{ site.data.course-info.fieldwork-end-date }}. 
 </p>
@@ -5,7 +8,7 @@
 	The Grad Show will be {{ site.data.course-info.grad-show-date }} from 5:30 to 9<span class="small-caps">pm</span>. 
 </p>
 <p>
-<a href="your-resume.html" title="Your Résumé">Your Résumé</a>
+	<a href="your-resume.html" title="Your R&eacute;sum&eacute;">Your Résumé</a> 
 </p>
 <!-- 
 <p>
@@ -22,26 +25,22 @@
 	<a href="{{ site.data.course-info.work-spreadsheet }}" title="Grad Show Teams/Work Log" target="_blank">Grad Show Teams/Work Log</a> 
 </p>
  -->
-
 <!-- 
 <p>
 <a href="https://www.dropbox.com/s/xkpmhgyo24mcjuz/student-fieldwork-consent-form.pdf.zip?dl=1" title="Fieldwork Consent Form">Fieldwork Consent Form</a> (.pdf)<br>
 Fill this out only if you're working on site.
 </p>
  -->
-
 <!-- 
 <p>
 <a href="https://www.dropbox.com/s/9rgcvkpnoj4eewd/donations-letter.pdf.zip?dl=1" title="Grad Show Donations Letter" target="_blank">Grad Show Donations Letter</a> (.pdf)
 </p>
  -->
-
 <!-- 
 <p>
 <a href="https://www.dropbox.com/s/9wsoxkyn2xm7ucr/lansdowne-horticulture-building.zip?dl=1" title="About the Horticulture Building" target="_blank">About the Horticulture Building</a> (.zip)
 </p>
  -->
-
 <!-- 
 <p>
 <a href="https://www.dropbox.com/s/g75pyb3q52uhrtn/international-students-fieldwork-info-sheet.pdf.zip?dl=1" title="International Student Fieldwork Information Sheet" target="_blank">International Students Fieldwork Info Sheet</a> (.pdf)
