add business documents page

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -10,6 +10,9 @@
 <p>
 	<a href="your-resume.html" title="Your R&eacute;sum&eacute;">Your Résumé</a> 
 </p>
+<p>
+    <a href="business-documents.html" title="Design Proposal Resources">Business Documents</a>
+</p>
 <!-- 
 <p>
 <a href="https://forms.office.com/r/Cfnb0V3zTE" target="_blank">Employer Form</a>
