--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,22 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&amp;display=swap" rel="stylesheet">
-	<title>Fieldwork</title>
+    <title>{{ page.title }} | Fieldwork & Professional Practice</title>
 </head>
+<script>
+  function copyText() {
+    const text = document.getElementById("text-to-copy").innerText;
+    navigator.clipboard.writeText(text).then(() => {
+      alert("Text copied to clipboard!");
+    }).catch(err => {
+      console.error("Failed to copy: ", err);
+    });
+  }
+</script>
 <body>
+<a href="#main-content" class="skip-link">Skip to main content</a>
 <div id="container">
-	<nav>
+	<nav role="navigation">
 		<ul>
 			<li><a href="index.html" class="{% if page.path contains 'index' %}current{% endif %}">Home</a></li>
 			<li><a href="portfolio-development.html" class="{% if page.name contains 'portfolio-development' %}current{% endif %}">Portfolio Dev</a> </li>
@@ -26,7 +37,7 @@
 			<a href="index.html" class="nodecoration">Fieldwork & Professional Practice</a> 
 		</h1>
 	</header>
-	<main>
+	<main id="main-content">
 		<h2>
 			{{ page.title }} 
 		</h2>
