bit'o text stylin'

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,4 +8,4 @@
 <span><a href="https://algonquindesign.ca" title="AlgonquinDesign.ca">AlgonquinDesign.ca</a></span>
 <span><a href="https://www.algonquincollege.com/international/" title="Algonquin College International Study Centre">International Study Center</a></span>
 </div>
-<div>This site aims to follow WCAG 2.1 AA guidelines. If you find any issues, please email me at <a href="mailto:{{ site.data.course-info.email }}" title="Alain Paradis' E-Mail Address.">{{ site.data.course-info.email }}</a>.
+<div style="font-size: .8rem;">This site aims to follow WCAG 2.1 AA guidelines. If you find any issues, please email me at <a href="mailto:{{ site.data.course-info.email }}" title="Alain Paradis' E-Mail Address.">{{ site.data.course-info.email }}</a>.
