--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,12 @@
 	--text-color: rgb(220, 220, 220);
 	--dark: rgb(36, 36, 36);
 	--medium: rgb(80, 80, 80);
-	--light: rgb(194, 194, 194);
+	--light: rgb(180, 180, 180);
 	--lightest: rgb(222, 222, 222);
 	--orange: rgb(255, 147, 0);
 	--orange50: rgba(255, 147, 0, 0.5);
+	--blue: rgba(0, 150, 255, 1);
+	--blue-light: rgba(179, 223, 255, 1);
 }
 
 *
@@ -62,6 +64,7 @@ nav
 
 nav ul
 {
+	list-style: none;
 	list-style-type: none;
 	display: flex;
 	flex-direction: column;
@@ -78,9 +81,15 @@ nav ul li
 	margin-top: 0.5rem;
 }
 
+nav ul li::before
+{
+	content: none;
+	/* disables the pseudo-element bullet */
+}
+
 nav ul li a
 {
-	color: white;
+	color: #FF2F92;
 	font-size: 1.5rem;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -96,7 +105,7 @@ a, a:link
 
 a:focus, button:focus
 {
-	outline: 2px solid var(--light);
+	outline: 2px solid var(--blue-light);
 	outline-offset: 4px;
 }
 
@@ -149,6 +158,15 @@ figcaption
 	text-align: center;
 	font-weight: 500;
 	color: var(--light);
+}
+
+blockquote
+{
+	margin-left: 1rem;
+	padding-left: 1rem;
+	border-left: solid 6px var(--orange);
+	color: var(--blue-light);
+	font-style: italic;
 }
 
 .current
@@ -223,6 +241,7 @@ h1 + p,
 	h4 + h5,
 	h5 + h6 { margin-top: 0.25rem; }
 p + P { margin-bottom: 1rem; }
+ul + p { margin-top: 2rem; }
 
 hr
 {
@@ -237,12 +256,26 @@ hr
 	font-weight: 600;
 }
 
-ul { margin: 0 0 1rem 3rem; }
-
-ul.none
+ul
 {
-	list-style-type: none;
-	margin: 1rem 0;
+	list-style: none;
+	margin: 0;
+	margin-left: 1rem;
+	padding: 0;
+}
+
+ul li
+{
+	position: relative;
+	padding-left: 1rem;
+}
+
+ul li::before
+{
+	content: "➔";
+	position: absolute;
+	left: 0;
+	color: var(--light);
 }
 
 ol
@@ -257,13 +290,14 @@ ol li { line-height: 2.0rem; }
 
 ul.legend
 {
-	list-style-type: none;
-	/* Remove bullet points */
+	list-style: none;
 	padding-left: 0;
 	margin-left: 0;
 	display: flex;
 	gap: 20px;
 }
+
+ul.legend li::before { content: none; }
 
 ul.legend li
 {
@@ -292,15 +326,17 @@ ul.employers li span img, ul.legend li span img
 	/* Align icons with text */
 	margin-left: 0.25rem;
 	/* Add spacing between text and icon */
+	list-style: none;
 }
 
 ul.employers
 {
-	list-style-type: none;
+	list-style: none;
 	padding-left: 0;
 	margin-left: 0;
 }
 
+ul.employers li::before { content: none; }
 ul.employers li { padding: 0.25rem 0 0.5rem 0; }
 
 code
@@ -388,12 +424,32 @@ em
 {
 	font-weight: 400;
 	font-style: italic;
+	color: var(--blue-light);
 }
 
 strong, bold, .bold
 {
 	font-weight: 600;
 	font-style: var(--font_style_normal);
+	color: var(--blue-light);
+}
+
+.copy-container
+{
+	position: relative;
+	border: 1px solid #ccc;
+	padding: 1em;
+	padding-top: 2.5rem;
+	margin-bottom: 2rem;
+}
+
+.copy-button
+{
+	position: absolute;
+	top: 1em;
+	right: 1em;
+	padding: 0.5em 1em;
+	cursor: pointer;
 }
 
 footer span { display: block; }
@@ -435,22 +491,4 @@ footer span { display: block; }
 	nav ul li a { font-size: 1.1rem; }
 	h1 { font-size: 2rem; }
 	aside h3 { margin-top: 2rem; }
-}
-
-.copy-container
-{
-	position: relative;
-	border: 1px solid #ccc;
-	padding: 1em;
-	padding-top: 2.5rem;
-	margin-bottom: 2rem;
-}
-
-.copy-button
-{
-	position: absolute;
-	top: 1em;
-	right: 1em;
-	padding: 0.5em 1em;
-	cursor: pointer;
 }
