--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,9 @@
 <div>
-<span>{{ site.data.course-info.course-code }} {{ site.data.course-info.course-name }}</span>
-<span>{{ site.data.course-info.professor }}</span>
-<span><a href="mailto:{{ site.data.course-info.email }}" title="Alain Paradis' E-Mail Address.">{{ site.data.course-info.email }}</a></span>
-<span><a href="tel:{{ site.data.course-info.phone }}">{{ site.data.course-info.phone }}</a></span>
+	<span>{{ site.data.course-info.course-code }} {{ site.data.course-info.course-name }}</span> <span>{{ site.data.course-info.professor }}</span> <span><a href="mailto:{{ site.data.course-info.email }}" title="Alain Paradis' E-Mail Address.">{{ site.data.course-info.email }}</a></span> <span><a href="tel:{{ site.data.course-info.phone }}">{{ site.data.course-info.phone }}</a></span> 
 </div>
 <div>
-<span><a href="https://algonquindesign.ca" title="AlgonquinDesign.ca">AlgonquinDesign.ca</a></span>
-<span><a href="https://www.algonquincollege.com/international/" title="Algonquin College International Study Centre">International Study Center</a></span>
+	<span><a href="https://algonquindesign.ca" title="AlgonquinDesign.ca">AlgonquinDesign.ca</a></span> <span><a href="https://www.algonquincollege.com/international/" title="Algonquin College International Study Centre">International Study Center</a></span> 
 </div>
-<div style="font-size: .8rem;">This site aims to follow WCAG 2.1 AA guidelines. If you find any issues, please email me at <a href="mailto:{{ site.data.course-info.email }}" title="Alain Paradis' E-Mail Address.">{{ site.data.course-info.email }}</a>.
+<div style="font-size: .8rem;">
+	This site aims to follow WCAG 2.1 AA guidelines. If you find any issues, please email me at <a href="mailto:{{ site.data.course-info.email }}" title="Alain Paradis' E-Mail Address.">{{ site.data.course-info.email }}</a>.
+</div>
