--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,33 +4,35 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/css/styles.css" type="text/css">
+	<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/css/styles.css" type="text/css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&amp;display=swap" rel="stylesheet">
-    <title>{{ page.title }} | Fieldwork & Professional Practice</title>
+	<title>{{ page.title }} | Fieldwork & Professional Practice</title>
 </head>
 <script>
-  function copyText() {
-    const text = document.getElementById("text-to-copy").innerText;
-    navigator.clipboard.writeText(text).then(() => {
-      alert("Text copied to clipboard!");
-    }).catch(err => {
-      console.error("Failed to copy: ", err);
-    });
-  }
+	function copyText() {
+	  const text = document.getElementById("text-to-copy").innerText;
+	  navigator.clipboard.writeText(text).then(() => {
+	    alert("Text copied to clipboard!");
+	  }).catch(err => {
+	    console.error("Failed to copy: ", err);
+	  });
+	}
 </script>
 <body>
-<a href="#main-content" class="skip-link">Skip to main content</a>
+<a href="#main-content" class="skip-link">Skip to main content</a> 
 <div id="container">
 	<nav role="navigation">
-		<ul>
-			<li><a href="index.html" class="{% if page.path contains 'index' %}current{% endif %}">Home</a></li>
-			<li><a href="portfolio-development.html" class="{% if page.name contains 'portfolio-development' %}current{% endif %}">Portfolio Dev</a> </li>
-			<li><a href="grad-show.html" class="{% if page.name contains 'grad' %}current{% endif %}">Grad Show</a></li>
-			<li><a href="fieldwork.html" class="{% if page.name contains 'fieldwork' %}current{% endif %}">Fieldwork</a></li>
-			<li><a href="employers.html" class="{% if page.name contains 'employers' %}current{% endif %}">Employers</a> </li>
-		</ul>
+		<div class="nav-inner">
+			<ul>
+				<li><a href="index.html" class="{% if page.path contains 'index' %}current{% endif %}">Home</a></li>
+				<li><a href="portfolio-development.html" class="{% if page.name contains 'portfolio-development' %}current{% endif %}">Portfolio Dev</a> </li>
+				<li><a href="grad-show.html" class="{% if page.name contains 'grad' %}current{% endif %}">Grad Show</a></li>
+				<li><a href="fieldwork.html" class="{% if page.name contains 'fieldwork' %}current{% endif %}">Fieldwork</a></li>
+				<li><a href="employers.html" class="{% if page.name contains 'employers' %}current{% endif %}">Employers</a> </li>
+			</ul>
+		</div>
 	</nav>
 	<header>
 		<h1>
@@ -46,10 +48,13 @@
 	<aside>
 		{% include aside.html %} 
 	</aside>
+	<div class="footer-wrapper">
 	<footer>
-		{% include footer.html %} 
+		<div class="footer-inner">
+			{% include footer.html %} 
+		</div>
 	</footer>
-</div>
+	</div>
 <script>
 	document.addEventListener('DOMContentLoaded', function() {
 	  const legendItems = document.querySelectorAll('.legend li');
