--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ body
 	background-color: var(--background-color);
 	margin: 0 auto 0 auto;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 #container
@@ -43,6 +44,10 @@ body
 	grid-template-rows: auto;
 	gap: .5rem 0;
 	grid-template-areas: "header" "nav" "aside" "main" "footer";
+	max-width: 1100px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0;
 }
 
 header
@@ -51,15 +56,30 @@ header
 	margin: 0 1rem;
 }
 
-aside { margin: 0 1rem; }
-main { margin: 0 1rem; }
-
 nav
 {
 	grid-area: nav;
-	margin: 0;
 	padding: 0;
 	width: 100%;
+}
+
+aside
+{
+	grid-area: aside;
+	margin: 0 0 0 1rem;
+}
+
+main
+{
+	grid-area: main;
+	margin: 0 1rem;
+}
+
+.nav-inner
+{
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1100px;
 }
 
 nav ul
@@ -109,7 +129,7 @@ a:focus, button:focus
 	outline-offset: 4px;
 }
 
-a:visited { color: var(--light); }
+a:visited { color: var(--text-color); }
 a:active { color: var(--orange); }
 
 a:hover
@@ -170,24 +190,40 @@ blockquote
 	font-style: italic;
 }
 
-.current
+a.current
 {
 	font-style: normal;
 	font-weight: 600;
-}
-
-nav ul li { padding: 0.5rem 1rem; }
+	color: var(--blue-light);
+	border-bottom: 2px solid var(--orange);
 }
 
 aside { grid-area: aside; }
 main { grid-area: main; }
 
+.footer-wrapper
+{
+	background-color: var(--dark);
+	border-top: solid 4px var(--medium);
+	width: 100vw;
+	position: relative;
+	left: 50%;
+	right: 50%;
+	margin-left: -50vw;
+	margin-right: -50vw;
+}
+
 footer
 {
 	grid-area: footer;
-	border-top: .25rem solid var(--medium);
+	max-width: 1100px;
+}
+
+.footer-inner
+{
+	margin-left: auto;
+	margin-right: auto;
 	padding: 1rem;
-	background-color: var(--dark);
 }
 
 footer div
@@ -249,12 +285,6 @@ hr
 	border: 0;
 	background-color: var(--background-color);
 	border-top: 1px dashed #8c8c8c;
-}
-
-.current
-{
-	font-style: normal;
-	font-weight: 600;
 }
 
 ul
@@ -455,20 +485,37 @@ strong, bold, .bold
 
 footer span { display: block; }
 
-@media only screen and (min-width: 60em) /* 960px */
+@media only screen and (min-width: 60em) /* 960px, the largest screen */
 {
 	#container
 	{
-		grid-template-columns: 1fr 1fr 1fr;
-		grid-template-areas: "nav nav nav" "header header header" "main main aside" "footer footer footer";
+		display: grid;
+		grid-template-areas: "nav nav" "header header" "main aside" "footer footer";
+		grid-template-columns: 2fr 1fr;
 	}
+	
+	header { grid-area: header; }
+	main { grid-area: main; }
+	aside { grid-area: aside; }
+	footer { grid-area: footer; }
 	
 	nav
 	{
+		grid-area: nav;
 		font-size: 1.1rem;
-		display: flex;
-		justify-content: flex-end;
 		background-color: var(--dark);
+		width: 100vw;
+		position: relative;
+		left: 50%;
+		right: 50%;
+		margin-left: -50vw;
+		margin-right: -50vw;
+	}
+	
+	.nav-inner
+	{
+		margin: 0 auto;
+		width: 1100px;
 	}
 	
 	nav ul
@@ -479,7 +526,7 @@ footer span { display: block; }
 		justify-content: flex-end;
 		flex-wrap: wrap;
 		margin: 0;
-		padding: 0.5rem 1rem;
+		padding: 0.5rem 0;
 	}
 	
 	nav ul li
@@ -499,4 +546,25 @@ footer span { display: block; }
 		column-gap: 2rem;
 		column-width: 50%;
 	}
+	
+	.footer-wrapper
+	{
+		grid-area: footer;
+		background-color: var(--dark);
+		width: 100vw;
+		position: relative;
+		left: 50%;
+		right: 50%;
+		margin-left: -50vw;
+		margin-right: -50vw;
+	}
+	
+	footer
+	{
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 1100px;
+	}
+	
+	.footer-inner { }
 }
