add link to aside

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,5 +1,5 @@
 <h3>
-	Dates & Stuff
+	Dates & Stuff 
 </h3>
 <p>
 	Fieldwork will start {{ site.data.course-info.fieldwork-start-date }} for six weeks, ending {{ site.data.course-info.fieldwork-end-date }}. 
@@ -11,7 +11,10 @@
 	<a href="your-resume.html" title="Your R&eacute;sum&eacute;">Your Résumé</a> 
 </p>
 <p>
-    <a href="business-documents.html" title="Design Proposal Resources">Business Documents</a>
+	<a href="portfolio-feedback.html" title="Getting Portfolio Feedback">Getting Portfolio Feedback</a> 
+</p>
+<p>
+	<a href="business-documents.html" title="Design Proposal Resources">Business Documents</a> 
 </p>
 <!-- 
 <p>
