--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/css/styles.css" type="text/css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&amp;display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&amp;family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&amp;family=IBM+Plex+Serif:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&amp;display=swap" rel="stylesheet">
 	<title>{{ page.title }} | Fieldwork & Professional Practice</title>
 </head>
 <script>
@@ -49,37 +49,37 @@
 		{% include aside.html %} 
 	</aside>
 	<div class="footer-wrapper">
-	<footer>
-		<div class="footer-inner">
-			{% include footer.html %} 
-		</div>
-	</footer>
+		<footer>
+			<div class="footer-inner">
+				{% include footer.html %} 
+			</div>
+		</footer>
 	</div>
-<script>
-	document.addEventListener('DOMContentLoaded', function() {
-	  const legendItems = document.querySelectorAll('.legend li');
-	  const employers = document.querySelectorAll('.employers li');
-	
-	  legendItems.forEach(item => {
-	    item.addEventListener('click', function() {
-	      const selectedModality = this.getAttribute('data-modality');
-	      
-	      // Update active state
-	      legendItems.forEach(li => li.classList.remove('active'));
-	      this.classList.add('active');
-	
-	      // Filter employers
-	      employers.forEach(employer => {
-	        const modality = employer.querySelector('img').alt;
-	        if (selectedModality === 'all' || modality === selectedModality) {
-	          employer.style.display = '';
-	        } else {
-	          employer.style.display = 'none';
-	        }
-	      });
-	    });
-	  });
-	});
+	<script>
+		document.addEventListener('DOMContentLoaded', function() {
+		  const legendItems = document.querySelectorAll('.legend li');
+		  const employers = document.querySelectorAll('.employers li');
+		
+		  legendItems.forEach(item => {
+		    item.addEventListener('click', function() {
+		      const selectedModality = this.getAttribute('data-modality');
+		      
+		      // Update active state
+		      legendItems.forEach(li => li.classList.remove('active'));
+		      this.classList.add('active');
+		
+		      // Filter employers
+		      employers.forEach(employer => {
+		        const modality = employer.querySelector('img').alt;
+		        if (selectedModality === 'all' || modality === selectedModality) {
+		          employer.style.display = '';
+		        } else {
+		          employer.style.display = 'none';
+		        }
+		      });
+		    });
+		  });
+		});
 </script>
 </body>
 </html>
