add link to RGD career workbook

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -16,6 +16,9 @@
 <p>
 	<a href="business-documents.html" title="Design Proposal Resources">Business Documents</a> 
 </p>
+<p>
+	<a href="https://rgd.ca/working-in-design/resources/the-rgd-career-planning-workbook-for-designers" title="RGD Career Planning Workbook PDF" target="_blank">RGD Career Planning Workbook</a> 
+</p>
 <!-- 
 <p>
 <a href="https://forms.office.com/r/Cfnb0V3zTE" target="_blank">Employer Form</a>
