--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,7 @@ figcaption
 	width: max-content;
 	transition: background-color 0.3s ease;
 }
+a.btn { border:0; }
 
 .btn:hover { background-color: var(--orange50); }
 
