update button style

--- a/css/styles.css
+++ b/css/styles.css
@@ -217,8 +217,8 @@ figcaption
 	font-weight: bold;
 	text-decoration: none;
 	padding: 0.75rem 2rem;
-    margin: 2rem auto;
-    text-align: center;
+	margin: 2rem auto;
+	text-align: center;
 	border: 0;
 	border-radius: 9999px;
 	background-clip: padding-box;
@@ -226,9 +226,18 @@ figcaption
 	width: max-content;
 	transition: background-color 0.3s ease;
 }
-a.btn { border:0; }
 
-.btn:hover { background-color: var(--orange50); }
+a.btn
+{
+	border: 0;
+	color: var(--dark);
+}
+
+.btn:hover
+{
+	background-color: var(--orange50);
+	color: var(--text-color);
+}
 
 blockquote
 {
