--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,11 @@
 	--light: rgb(180, 180, 180);
 	--lightest: rgb(222, 222, 222);
 	--orange: rgb(255, 147, 0);
-	--orange50: rgba(255, 147, 0, 0.5);
+	--orange50: rgba(224, 174, 59);
 	--blue: rgba(0, 150, 255, 1);
 	--blue-light: rgba(179, 223, 255, 1);
+	--serif: "IBM Plex Serif", serif;
+	--sans: "IBM Plex Sans", sans-serif;
 }
 
 *
@@ -21,7 +23,7 @@
 
 html
 {
-	font-family: "IBM Plex Serif", serif;
+	font-family: var(--serif);
 	font-style: normal;
 	font-size: clamp(15px, 1.5vw, 18px);
 	font-weight: 400;
@@ -70,7 +72,7 @@ nav
 
 aside
 {
-	font-family: "IBM Plex Sans", sans-serif;
+	font-family: var(--sans);
 	font-style: normal;
 	grid-area: aside;
 	margin: 0 0 0 1rem;
@@ -124,7 +126,7 @@ nav ul li a
 
 .sans
 {
-	font-family: "IBM Plex Sans", sans-serif;
+	font-family: var(--sans);
 	font-style: normal;
 }
 
@@ -209,7 +211,7 @@ figcaption
 	color: var(--light);
 }
 
-.btn
+a.btn
 {
 	background-color: var(--orange);
 	color: var(--medium);
@@ -227,18 +229,37 @@ figcaption
 	transition: background-color 0.3s ease;
 }
 
-a.btn
+a.btn-small
 {
-	border: 0;
-	color: var(--dark);
+	background-color: var(--orange);
+	color: var(--medium);
+	font-family: var(--sans);
+	font-size: 1rem;
+	font-weight: bold;
+	text-decoration: none;
+	padding: 0.25rem 2rem;
+	margin: 2rem auto;
+	text-align: center;
+	border: 4px solid var(--orange50);
+	border-radius: 9999px;
+	background-clip: padding-box;
+	display: block;
+	width: max-content;
+	transition: background-color 0.3s ease;
 }
 
 .btn:hover
 {
-	background-color: var(--orange50);
-	color: var(--text-color);
+	background-color: var(--light);
+	color: var(--dark);
 }
 
+.btn-small:hover
+{
+	background-color: var(--light);
+	color: var(--dark);
+	border: 4px solid var(--dark);
+}
 blockquote
 {
 	margin-left: 1rem;
@@ -295,7 +316,7 @@ footer div:nth-child(n+1) { margin-top: 1rem; }
 
 h1, h2, h3, h4, h5, h6
 {
-	font-family: "IBM Plex Sans", sans-serif;
+	font-family: var(--sans);
 	font-style: normal;
 }
 
@@ -354,7 +375,7 @@ hr
 ul
 {
 	column-count: 1;
-	font-family: "IBM Plex Sans", sans-serif;
+	font-family: var(--sans);
 	list-style: none;
 	margin: 0;
 	margin-left: 1rem;
@@ -385,7 +406,7 @@ ol
 	margin: 0 0 1rem 3rem;
 }
 
-ol li { line-height: 2.0rem; }
+ol li { font-family: var(--sans); line-height: 2.0rem; }
 
 ul.legend
 {
@@ -434,13 +455,14 @@ ul.employers
 
 ul.employers li::before { content: none; }
 ul.employers li { padding: 0.25rem 0 0.5rem 0; }
-a.crossed-out {
-  text-decoration: line-through;
-  text-decoration-color: var(--blue-light);
-  color: var(--light);
-  border-bottom: 0;
-}
 
+a.crossed-out
+{
+	text-decoration: line-through;
+	text-decoration-color: var(--blue-light);
+	color: var(--light);
+	border-bottom: 0;
+}
 
 code
 {
@@ -575,7 +597,7 @@ footer span { display: block; }
 	footer
 	{
 		grid-area: footer;
-		font-family: "IBM Plex Sans", sans-serif;
+		font-family: var(--sans);
 	}
 	
 	nav
