--- a/css/styles.css
+++ b/css/styles.css
@@ -240,7 +240,7 @@ a.btn-small
 	padding: 0.25rem 2rem;
 	margin: 2rem auto;
 	text-align: center;
-	border: 4px solid var(--orange50);
+	border: 4px solid var(--medium);
 	border-radius: 9999px;
 	background-clip: padding-box;
 	display: block;
