add link to Friday meeting notes Word doc.

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -8,6 +8,9 @@
 	The Grad Show will be {{ site.data.course-info.grad-show-date }} from 5:00 to 9<span class="small-caps">pm</span>. 
 </p>
 <p>
+ <a href="https://algonquinlivecom-my.sharepoint.com/:w:/g/personal/paradia_algonquincollege_com/EYC_hvq3F_hImPp5uCz1LdABNIvAswfBAOiEK710YCpOyw?e=pfmkTp" target="_blank">Friday Meeting Notes</a>
+</p>
+<p>
 	<a href="your-resume.html" title="Your R&eacute;sum&eacute;">Your Résumé</a> 
 </p>
 <p>
