--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,11 @@
 	<nav role="navigation">
 		<div class="nav-inner">
 			<ul>
-				<li><a href="index.html" class="{% if page.path contains 'index' %}current{% endif %}">Home</a></li>
-				<li><a href="portfolio-development.html" class="{% if page.name contains 'portfolio-development' %}current{% endif %}">Portfolio Dev</a> </li>
-				<li><a href="grad-show.html" class="{% if page.name contains 'grad' %}current{% endif %}">Grad Show</a></li>
-				<li><a href="fieldwork.html" class="{% if page.name contains 'fieldwork' %}current{% endif %}">Fieldwork</a></li>
-				<li><a href="employers.html" class="{% if page.name contains 'employers' %}current{% endif %}">Employers</a> </li>
+				<li><a href="/" class="{% if page.path contains 'index' %}current{% endif %}">Home</a></li>
+				<li><a href="/portfolio-development/" class="{% if page.name contains 'portfolio-development' %}current{% endif %}">Portfolio Dev</a> </li>
+				<li><a href="/grad-show/" class="{% if page.name contains 'grad' %}current{% endif %}">Grad Show</a></li>
+				<li><a href="/fieldwork/" class="{% if page.name contains 'fieldwork' %}current{% endif %}">Fieldwork</a></li>
+				<li><a href="/employers/" class="{% if page.name contains 'employers' %}current{% endif %}">Employers</a> </li>
 			</ul>
 		</div>
 	</nav>
