reformat urls to /page/

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -11,13 +11,13 @@
  <a href="https://algonquinlivecom-my.sharepoint.com/:w:/g/personal/paradia_algonquincollege_com/EYC_hvq3F_hImPp5uCz1LdABNIvAswfBAOiEK710YCpOyw?e=pfmkTp" target="_blank">Friday Meeting Notes</a>
 </p>
 <p>
-	<a href="your-resume.html" title="Your R&eacute;sum&eacute;">Your Résumé</a> 
+	<a href="/your-resume/" title="Your R&eacute;sum&eacute;">Your Résumé</a> 
 </p>
 <p>
-	<a href="portfolio-feedback.html" title="Getting Portfolio Feedback">Getting Portfolio Feedback</a> 
+	<a href="/portfolio-feedback/" title="Getting Portfolio Feedback">Getting Portfolio Feedback</a> 
 </p>
 <p>
-	<a href="business-documents.html" title="Design Proposal Resources">Business Documents</a> 
+	<a href="/business-documents/" title="Design Proposal Resources">Business Documents</a> 
 </p>
 <p>
 	<a href="https://rgd.ca/working-in-design/resources/the-rgd-career-planning-workbook-for-designers" title="RGD Career Planning Workbook PDF" target="_blank">RGD Career Planning Workbook</a> 
