--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -7,33 +7,19 @@
 <p>
 	The Grad Show will be {{ site.data.course-info.grad-show-date }} from 5:00 to 9<span class="small-caps">pm</span>. 
 </p>
-<p>
- <a href="https://algonquinlivecom-my.sharepoint.com/:w:/g/personal/paradia_algonquincollege_com/EYC_hvq3F_hImPp5uCz1LdABNIvAswfBAOiEK710YCpOyw?e=pfmkTp" target="_blank">Friday Meeting Notes</a>
-</p>
-<p>
-	<a href="/your-resume/" title="Your R&eacute;sum&eacute;">Your Résumé</a> 
-</p>
-<p>
-	<a href="/portfolio-feedback/" title="Getting Portfolio Feedback">Getting Portfolio Feedback</a> 
-</p>
-<p>
-	<a href="/business-documents/" title="Design Proposal Resources">Business Documents</a> 
-</p>
-<p>
-	<a href="https://rgd.ca/working-in-design/resources/the-rgd-career-planning-workbook-for-designers" title="RGD Career Planning Workbook PDF" target="_blank">RGD Career Planning Workbook</a> 
-</p>
+<a href="https://algonquinlivecom-my.sharepoint.com/:w:/g/personal/paradia_algonquincollege_com/EYC_hvq3F_hImPp5uCz1LdABNIvAswfBAOiEK710YCpOyw?e=pfmkTp" target="_blank">Friday Meeting Notes</a><br>
+<a href="/your-resume/" title="Your R&eacute;sum&eacute;">Your Résumé</a><br>
+<a href="/portfolio-feedback/" title="Getting Portfolio Feedback">Getting Portfolio Feedback</a><br>
+<a href="/business-documents/" title="Design Proposal Resources">Business Documents</a><br>
+<a href="https://rgd.ca/working-in-design/resources/the-rgd-career-planning-workbook-for-designers" title="RGD Career Planning Workbook PDF" target="_blank">RGD Career Planning Workbook</a><br>
+<a href="{{ site.data.course-info.i-got-my-fieldwork-form }}" title="I got Fieldwork" target="_blank">I got Fieldwork!</a><br>
+<a href="{{ site.data.course-info.work-spreadsheet }}" title="Grad Show Teams/Work Log" target="_blank">Grad Show Teams/Work Log</a><br>
+
 <!-- 
 <p>
 <a href="https://forms.office.com/r/Cfnb0V3zTE" target="_blank">Employer Form</a>
 </p>
  -->
-<p>
-	<a href="{{ site.data.course-info.i-got-my-fieldwork-form }}" title="I got Fieldwork" target="_blank">I got Fieldwork!</a> 
-</p>
-<p>
-	<a href="{{ site.data.course-info.work-spreadsheet }}" title="Grad Show Teams/Work Log" target="_blank">Grad Show Teams/Work Log</a> 
-</p>
-
 <!-- 
 <p>
 <a href="https://www.dropbox.com/s/xkpmhgyo24mcjuz/student-fieldwork-consent-form.pdf.zip?dl=1" title="Fieldwork Consent Form">Fieldwork Consent Form</a> (.pdf)<br>
