add download floorplan of horticulture building

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -14,30 +14,12 @@
 <a href="https://rgd.ca/working-in-design/resources/the-rgd-career-planning-workbook-for-designers" title="RGD Career Planning Workbook PDF" target="_blank">RGD Career Planning Workbook</a><br>
 <a href="{{ site.data.course-info.i-got-my-fieldwork-form }}" title="I got Fieldwork" target="_blank">I got Fieldwork!</a><br>
 <a href="{{ site.data.course-info.work-spreadsheet }}" title="Grad Show Teams/Work Log" target="_blank">Grad Show Teams/Work Log</a><br>
-
+<a href="/downloads/Horticulture-Building-Floor-Plan.pdf.zip" title="About the Horticulture Building" target="_blank">About the Horticulture Building</a> (.zip)<br>
 <!-- 
-<p>
 <a href="https://forms.office.com/r/Cfnb0V3zTE" target="_blank">Employer Form</a>
-</p>
- -->
-<!-- 
-<p>
 <a href="https://www.dropbox.com/s/xkpmhgyo24mcjuz/student-fieldwork-consent-form.pdf.zip?dl=1" title="Fieldwork Consent Form">Fieldwork Consent Form</a> (.pdf)<br>
 Fill this out only if you're working on site.
-</p>
- -->
-<!-- 
-<p>
 <a href="https://www.dropbox.com/s/9rgcvkpnoj4eewd/donations-letter.pdf.zip?dl=1" title="Grad Show Donations Letter" target="_blank">Grad Show Donations Letter</a> (.pdf)
-</p>
- -->
-<!-- 
-<p>
-<a href="https://www.dropbox.com/s/9wsoxkyn2xm7ucr/lansdowne-horticulture-building.zip?dl=1" title="About the Horticulture Building" target="_blank">About the Horticulture Building</a> (.zip)
-</p>
- -->
-<!-- 
-<p>
+
 <a href="https://www.dropbox.com/s/g75pyb3q52uhrtn/international-students-fieldwork-info-sheet.pdf.zip?dl=1" title="International Student Fieldwork Information Sheet" target="_blank">International Students Fieldwork Info Sheet</a> (.pdf)
-</p>
- -->
+-->
