add anxiety link to aside

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -15,6 +15,7 @@
 <a href="{{ site.data.course-info.i-got-my-fieldwork-form }}" title="I got Fieldwork" target="_blank">I got Fieldwork!</a><br>
 <a href="{{ site.data.course-info.work-spreadsheet }}" title="Grad Show Teams/Work Log" target="_blank">Grad Show Teams/Work Log</a><br>
 <a href="/downloads/Horticulture-Building-Floor-Plan.pdf.zip" title="About the Horticulture Building" target="_blank">About the Horticulture Building</a> (.zip)<br>
+<a href="/handling-anxiety/" title="Handling anxiety">Handling anxiety</a><br>
 <!-- 
 <a href="https://forms.office.com/r/Cfnb0V3zTE" target="_blank">Employer Form</a>
 <a href="https://www.dropbox.com/s/xkpmhgyo24mcjuz/student-fieldwork-consent-form.pdf.zip?dl=1" title="Fieldwork Consent Form">Fieldwork Consent Form</a> (.pdf)<br>
