fix responsiveness of nav and footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,19 +21,20 @@
 	}
 </script>
 <body>
-<a href="#main-content" class="skip-link">Skip to main content</a> 
-<div id="container">
-	<nav role="navigation">
-		<div class="nav-inner">
-			<ul>
-				<li><a href="/" class="{% if page.path contains 'index' %}current{% endif %}">Home</a></li>
-				<li><a href="/portfolio-development/" class="{% if page.name contains 'portfolio-development' %}current{% endif %}">Portfolio Dev</a> </li>
-				<li><a href="/grad-show/" class="{% if page.name contains 'grad' %}current{% endif %}">Grad Show</a></li>
-				<li><a href="/fieldwork/" class="{% if page.name contains 'fieldwork' %}current{% endif %}">Fieldwork</a></li>
-				<li><a href="/employers/" class="{% if page.name contains 'employers' %}current{% endif %}">Employers</a> </li>
-			</ul>
-		</div>
-	</nav>
+<a href="#main-content" class="skip-link">Skip to main content</a>
+
+	<div id="container">
+		<nav role="navigation" class="full-bleed">
+			<div class="nav-inner">
+				<ul>
+					<li><a href="/" class="{% if page.path contains 'index' %}current{% endif %}">Home</a></li>
+					<li><a href="/portfolio-development/" class="{% if page.name contains 'portfolio-development' %}current{% endif %}">Portfolio Dev</a> </li>
+					<li><a href="/grad-show/" class="{% if page.name contains 'grad' %}current{% endif %}">Grad Show</a></li>
+					<li><a href="/fieldwork/" class="{% if page.name contains 'fieldwork' %}current{% endif %}">Fieldwork</a></li>
+					<li><a href="/employers/" class="{% if page.name contains 'employers' %}current{% endif %}">Employers</a> </li>
+				</ul>
+			</div>
+		</nav>
 	<header>
 		<h1>
 			<a href="index.html" class="nodecoration">Work-Integrated Learning</a> 
@@ -48,6 +49,10 @@
 	<aside>
 		{% include aside.html %} 
 	</aside>
+	</aside>
+
+	</div>
+
 	<div class="footer-wrapper">
 		<footer>
 			<div class="footer-inner">
