--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -5,16 +5,16 @@
 	Fieldwork will start {{ site.data.course-info.fieldwork-start-date }} for six weeks, ending {{ site.data.course-info.fieldwork-end-date }}. 
 </p>
 <p>
-	The Grad Show will be {{ site.data.course-info.grad-show-date }} from 5:00 to 9<span class="small-caps">pm</span>. 
+	The Grad Show will be {{ site.data.course-info.grad-show-date }} from 5:00 to 9<span class="small-caps">pm</span> at {{ site.data.course-info.grad-show-location }} <a href="{{ site.data.course-info.grad-show-location-map }}"  target="_blank" rel="noopener noreferrer">[MAP]</a>
 </p>
-<a href="https://algonquinlivecom-my.sharepoint.com/:w:/g/personal/paradia_algonquincollege_com/EYC_hvq3F_hImPp5uCz1LdABNIvAswfBAOiEK710YCpOyw?e=pfmkTp" target="_blank">Friday Meeting Notes</a><br>
+<a href="https://algonquinlivecom-my.sharepoint.com/:w:/g/personal/paradia_algonquincollege_com/EYC_hvq3F_hImPp5uCz1LdABNIvAswfBAOiEK710YCpOyw?e=pfmkTp" target="_blank" rel="noopener noreferrer">Friday Meeting Notes</a><br>
 <a href="/your-resume/" title="Your R&eacute;sum&eacute;">Your Résumé</a><br>
 <a href="/portfolio-feedback/" title="Getting Portfolio Feedback">Getting Portfolio Feedback</a><br>
 <a href="/business-documents/" title="Design Proposal Resources">Business Documents</a><br>
-<a href="https://rgd.ca/working-in-design/resources/the-rgd-career-planning-workbook-for-designers" title="RGD Career Planning Workbook PDF" target="_blank">RGD Career Planning Workbook</a><br>
-<a href="{{ site.data.course-info.i-got-my-fieldwork-form }}" title="I got Fieldwork" target="_blank">I got Fieldwork!</a><br>
-<a href="{{ site.data.course-info.work-spreadsheet }}" title="Grad Show Teams/Work Log" target="_blank">Grad Show Teams/Work Log</a><br>
-<a href="/downloads/Horticulture-Building-Floor-Plan.pdf.zip" title="About the Horticulture Building" target="_blank">About the Horticulture Building</a> (.zip)<br>
+<a href="https://rgd.ca/working-in-design/resources/the-rgd-career-planning-workbook-for-designers" title="RGD Career Planning Workbook PDF" target="_blank" rel="noopener noreferrer">RGD Career Planning Workbook</a><br>
+<a href="{{ site.data.course-info.i-got-my-fieldwork-form }}" title="I got Fieldwork" target="_blank" rel="noopener noreferrer">I got Fieldwork!</a><br>
+<a href="{{ site.data.course-info.work-spreadsheet }}" title="Grad Show Teams/Work Log" target="_blank" rel="noopener noreferrer">Grad Show Teams/Work Log</a><br>
+<a href="/downloads/Horticulture-Building-Floor-Plan.pdf.zip" title="About the Horticulture Building" target="_blank" rel="noopener noreferrer">About the Horticulture Building</a> (.zip)<br>
 <a href="/handling-anxiety/" title="Handling anxiety">Handling anxiety</a><br>
 <!-- 
 <a href="https://forms.office.com/r/Cfnb0V3zTE" target="_blank">Employer Form</a>
