update grad show location

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -5,7 +5,8 @@
 	Fieldwork will start {{ site.data.course-info.fieldwork-start-date }} for six weeks, ending {{ site.data.course-info.fieldwork-end-date }}. 
 </p>
 <p>
-	The Grad Show will be {{ site.data.course-info.grad-show-date }} from 5:00 to 9<span class="small-caps">pm</span> at {{ site.data.course-info.grad-show-location }} <a href="{{ site.data.course-info.grad-show-location-map }}"  target="_blank" rel="noopener noreferrer">[MAP]</a>
+	The Grad Show will be {{ site.data.course-info.grad-show-date }} from 5:00 to 9<span class="small-caps">pm</span> at the {{ site.data.course-info.grad-show-location }}.<br>
+		<a href="{{ site.data.course-info.grad-show-location-map }}" target="_blank" rel="noopener noreferrer">1525 Princess Patricia Way,<br>Ottawa ON K1S 5J3, Canada</a> 
 </p>
 <a href="https://algonquinlivecom-my.sharepoint.com/:w:/g/personal/paradia_algonquincollege_com/EYC_hvq3F_hImPp5uCz1LdABNIvAswfBAOiEK710YCpOyw?e=pfmkTp" target="_blank" rel="noopener noreferrer">Friday Meeting Notes</a><br>
 <a href="/your-resume/" title="Your R&eacute;sum&eacute;">Your Résumé</a><br>
